fix dots cropping on product-params

--- a/src/blocks/product-params/product-params.styl
+++ b/src/blocks/product-params/product-params.styl
@@ -149,11 +149,11 @@
 			background-color #fff
 			border-radius 50%
 			.reverse &
-				opacity 0.2
+				background-color rgba(255, 255,255, 0.2)
 				&.disabled
-					opacity 1
+					background-color #fff
 			&.disabled
-				opacity 0.2
+				background-color rgba(255, 255,255, 0.2)
 	&__cart
 		color #fff
 		text-transform uppercase
